--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,69 @@
 * {
 	box-sizing: border-box;
+	margin: 0;
 }
 
 body {
 	font-family: 'Comfortaa', cursive;
 	background-color: #f3f6fd;
+}
+
+.app {
+	display: flex;
+}
+.logo {
+	margin-bottom: 50px;
+}
+.panel {
+	background-color: white;
+	min-height: 100vh;
+	padding: 30px;
+}
+.menu {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 25px;
+}
+.menu__list {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 25px;
+}
+.menu__item {
+	background: #ffffff;
+	box-shadow: 0px 8px 14px rgba(62, 107, 224, 0.12);
+	border-radius: 14px;
+	border: none;
+	width: 45px;
+	height: 45px;
+	transition: 0.3s all;
+	cursor: pointer;
+}
+.menu__item:hover {
+	background: #6a6afb;
+}
+.menu__item:hover img {
+	filter: brightness(0) invert(1);
+}
+.menu__item-active {
+	background: #5051f9;
+}
+.menu__item-active:hover {
+	background: #6a6afb;
+}
+.menu__item-active img {
+	filter: brightness(0) invert(1);
+}
+.menu__add {
+	background: none;
+	border: 1px solid #cad5ff;
+	border-radius: 14px;
+	width: 45px;
+	height: 45px;
+	cursor: pointer;
+}
+.menu__add:hover {
+	background: #f3f3fb;
 }
