--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@
 
 body {
 	font-family: 'Comfortaa', cursive;
+	font-weight: 400;
 	background-color: #f3f6fd;
 }
 
@@ -36,8 +37,8 @@ body {
 	box-shadow: 0px 8px 14px rgba(62, 107, 224, 0.12);
 	border-radius: 14px;
 	border: none;
-	width: 45px;
-	height: 45px;
+	width: 55px;
+	height: 55px;
 	transition: 0.3s all;
 	cursor: pointer;
 }
@@ -50,7 +51,7 @@ body {
 .menu__item-active {
 	background: #5051f9;
 }
-.menu__item-active:hover {
+.menu__item--active:hover {
 	background: #6a6afb;
 }
 .menu__item-active img {
@@ -60,10 +61,149 @@ body {
 	background: none;
 	border: 1px solid #cad5ff;
 	border-radius: 14px;
-	width: 45px;
-	height: 45px;
+	width: 55px;
+	height: 55px;
 	cursor: pointer;
 }
 .menu__add:hover {
 	background: #f3f3fb;
+}
+
+/* content */
+
+.content {
+	padding: 50px;
+	width: 100%;
+}
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+h1 {
+	font-size: 30px;
+	line-height: 33px;
+
+	color: #000000;
+}
+.progress {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	min-width: 235px;
+}
+.progress__text {
+	display: flex;
+	justify-content: space-between;
+}
+.progress__name {
+	font-size: 14px;
+	line-height: 16px;
+
+	color: #232360;
+}
+.progress__percent {
+	font-size: 12px;
+	line-height: 13px;
+
+	color: #768396;
+}
+.progress__bar {
+	width: 100%;
+	height: 5px;
+	background: #e6e9ed;
+	border-radius: 4px;
+	position: relative;
+	transition: 0.3s all;
+}
+.progress__cover-bar {
+	position: absolute;
+	width: 80%;
+	height: 5px;
+	background: #5051f9;
+	border-radius: 4px;
+}
+main {
+	margin-top: 30px;
+}
+.habbit {
+	background: #ffffff;
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+	margin-bottom: 12px;
+}
+.habbit__day {
+	background: #fbfaff;
+	border: 10px 0 0 10px;
+	border-right: 1px solid #e7ebfb;
+	padding: 20px 40px;
+	font-size: 14px;
+	line-height: 16px;
+	color: #000000;
+	min-width: 150px;
+}
+.habbit__comment {
+	font-size: 16px;
+	line-height: 18px;
+	color: #23235f;
+	padding: 20px 25px;
+}
+.habbit__delete {
+	margin-left: auto;
+	margin-right: 10px;
+	background: none;
+	border: none;
+	cursor: pointer;
+	border-radius: 5px;
+	padding: 5px;
+}
+.habbit__delete:hover {
+	background: #fbfaff;
+}
+.habbit__form {
+	display: flex;
+	gap: 15px;
+	width: 100%;
+	padding: 0 10px 0 25px;
+	position: relative;
+}
+input {
+	font-family: 'Comfortaa';
+	background: #ffffff;
+	border: 1px solid #e7ebfb;
+	border-radius: 9px;
+	padding: 12px 20px;
+	flex: 1;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+input:placeholder {
+	font-family: 'Comfortaa';
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+.input__icon-mod {
+	padding-left: 45px;
+}
+.input__icon {
+	position: absolute;
+	top: 10px;
+	left: 45px;
+}
+.habbit__comment-submit {
+	background: #edecfe;
+	border-radius: 9px;
+	border: none;
+	font-size: 13px;
+	line-height: 14px;
+	color: #5051f9;
+	padding: 15px 33px;
+	cursor: pointer;
+}
+.habbit__comment-submit:hover {
+	background: #5051f9;
+	color: white;
 }
