--- a/styles/main.css
+++ b/styles/main.css
@@ -48,13 +48,13 @@ body {
 .menu__item:hover img {
 	filter: brightness(0) invert(1);
 }
-.menu__item-active {
+.menu__item--active {
 	background: #5051f9;
 }
 .menu__item--active:hover {
 	background: #6a6afb;
 }
-.menu__item-active img {
+.menu__item--active img {
 	filter: brightness(0) invert(1);
 }
 .menu__add {
@@ -80,7 +80,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 }
-h1 {
+.title {
 	font-size: 30px;
 	line-height: 33px;
 
@@ -114,14 +114,13 @@ h1 {
 	background: #e6e9ed;
 	border-radius: 4px;
 	position: relative;
-	transition: 0.3s all;
 }
 .progress__cover-bar {
 	position: absolute;
-	width: 80%;
 	height: 5px;
 	background: #5051f9;
 	border-radius: 4px;
+	transition: 1s all;
 }
 main {
 	margin-top: 30px;
