--- a/styles/main.css
+++ b/styles/main.css
@@ -287,6 +287,9 @@ input:placeholder {
 	align-items: center;
 	justify-content: center;
 }
+.icon__error {
+	border: 1px solid red;
+}
 .icon--active {
 	background: #5051f9;
 }
